force-app/main/default/objects/TA_Plan__c/TA_Plan__c.object-meta.xml
<CustomObject>
    <label>TA Plan</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>TA Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TA Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>