force-app/main/default/objects/TA_Plan__c/fields/Compliance_TA_Plans_from_National__c.field-meta.xml
<CustomField>
    <fullName>Compliance_TA_Plans_from_National__c</fullName>
    <label>Compliance TA Plans from National</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>