force-app/main/default/objects/TA_Plan__c/fields/Program_Score__c.field-meta.xml
<CustomField>
    <fullName>Program_Score__c</fullName>
    <label>Program Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Score</valueSetName>
    </valueSet>
</CustomField>