force-app/main/default/objects/TA_Plan__c/fields/Program_TA_Plans_from_National__c.field-meta.xml
<CustomField>
    <fullName>Program_TA_Plans_from_National__c</fullName>
    <label>Program TA Plans from National</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>