force-app/main/default/objects/TA_Plan__c/fields/Program_TA_Plans_Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Program_TA_Plans_Internal_Notes__c</fullName>
    <label>Program TA Plans Internal Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>