force-app/main/default/objects/TA_Plan__c/recordTypes/TA_Plan.recordType-meta.xml
<RecordType>
    <fullName>TA_Plan</fullName>
    <active>true</active>
    <label>TA Plan</label>
</RecordType>