force-app/main/default/objects/TA_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Organization__c</columns>
    <columns>Compliance_Score__c</columns>
    <columns>Finance_Score__c</columns>
    <columns>Program_Score__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>